<resources>
    <string name="app_name">Buoi2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firt_fragment_title">Let’s Join Us!</string>
    <string name="firt_fragment_deception">We provide you with the best way\nto organize activities in the\nclassroom</string>
    <string name="firt_fragment_email">Email</string>
    <string name="firt_fragment_deception_email">iqbal.syafiq.rozaan@gmail.com</string>
    <string name="firt_fragment_join_now">JOIN NOW</string>
    <string name="firt_fragment_signin">SIGN IN</string>

    <string name="second_fragment_title">Let\'s Complete\nThe Form</string>
    <string name="second_fragment_full_name_deception">Iqbal Shafiq Rozaan</string>
    <string name="second_fragment_full_name">Full Name</string>
    <string name="second_fragment_email">Email</string>
    <string name="second_fragment_password">Password</string>
    <string name="second_fragment_password_deception">***********</string>
    <string name="second_fragment_password_onfirmation">Password Confirmation</string>
    <string name="second_fragment_signup">Sign Up</string>
    <string name="second_fragment_back">Back</string>

    <string name="third_fragment_title">Pass The Credentials</string>

</resources>