<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FirstFragment"
    android:background="@color/login_background"
    android:paddingHorizontal="@dimen/_30sdp"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_169sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/img_girl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/firt_fragment_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:text="@string/firt_fragment_deception"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:text="@string/firt_fragment_email"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:drawableLeft="@drawable/icon_email"
        android:paddingLeft="@dimen/_15sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/_13sdp"
        android:text="@string/firt_fragment_deception_email"
        android:background="@drawable/first_fragment_background_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txt_join"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:background="@drawable/stroke_button"
        android:text="@string/firt_fragment_join_now"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txt_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/firt_fragment_signin"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_join"
        app:layout_constraintStart_toStartOf="@+id/txt_join"
        app:layout_constraintTop_toBottomOf="@+id/txt_join" />


</androidx.constraintlayout.widget.ConstraintLayout>